--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "no-name",
   "license": "UNLICENSED",
   "dependencies": {
+    "@fontsource/abel": "4.5.0",
     "@polymer/iron-icon": "3.0.1",
     "@polymer/iron-iconset-svg": "3.0.1",
     "@polymer/iron-list": "3.1.0",
@@ -118,6 +119,7 @@
     "@vaadin/virtual-list": "23.2.0",
     "construct-style-sheets-polyfill": "3.1.0",
     "date-fns": "2.28.0",
+    "line-awesome": "1.3.0",
     "lit": "2.3.0",
     "proj4": "2.8.0"
   },
@@ -257,6 +259,7 @@
   },
   "vaadin": {
     "dependencies": {
+      "@fontsource/abel": "4.5.0",
       "@polymer/iron-icon": "3.0.1",
       "@polymer/iron-iconset-svg": "3.0.1",
       "@polymer/iron-list": "3.1.0",
@@ -372,6 +375,7 @@
       "@vaadin/virtual-list": "23.2.0",
       "construct-style-sheets-polyfill": "3.1.0",
       "date-fns": "2.28.0",
+      "line-awesome": "1.3.0",
       "lit": "2.3.0",
       "proj4": "2.8.0"
     },
@@ -390,6 +394,6 @@
       "workbox-core": "6.5.0",
       "workbox-precaching": "6.5.0"
     },
-    "hash": "9753dd95c0187bb74cf4da1667f417ad5469bf99b67d17319d2f0134887f9b5b"
+    "hash": "3c0cbda653d6786bc229b7f95ca2aaf24120b3304a8e39aca7057cc27bd63c82"
   }
 }
